Prevent horizontal scroll on body

--- a/source/catalyst.scss
+++ b/source/catalyst.scss
@@ -33,6 +33,7 @@ body {
   font-family: $body-font;
   margin: 0;
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 h1 {
